--- a/templates/org-table.html
+++ b/templates/org-table.html
@@ -1,7 +1,7 @@
-<table class="container">
+<table class="container js-sort-table">
     <tr>
       <th>Name</th>
-      <th>Platforms</th>
+      <th class="js-sort-none">Platforms</th>
       <th>Type</th>
     </tr>
 
