--- a/templates/topic-page.html
+++ b/templates/topic-page.html
@@ -23,10 +23,10 @@
 {{- $countries := query "countries" -}}
 {{- $topic := .class -}}
 
-    <table class="container">
+    <table class="container js-sort-table">
         <tr>
           <th>Name</th>
-          <th>Platforms</th>
+          <th  class="js-sort-none">Platforms</th>
           <th>Type</th>
           <th>Country</th>
         </tr>
@@ -76,4 +76,5 @@ Array.from(dataTable.children[0].children).forEach((row, index) => {
 const downloadElm = document.querySelector('#download');
 downloadElm.href = window.URL.createObjectURL(new Blob([csv], { type: 'text/csv' }));
 </script>
+<script src="/thirdparty/sort-table/sort-table.js"></script>
 {{ end }}
