🐛 fix typo of lead -> led
Fixes #123

--- a/templates/org.html
+++ b/templates/org.html
@@ -68,7 +68,7 @@
                     <a href="{{ $details.website }}">{{ replace (replace $details.website.String "http://" "" 1) "https://" "" 1 }}</a>
                     {{- else -}} <span class="text-grey">[missing data]</span>
                     {{- end -}}</li>
-                    <li>Lead by: {{ if $details.leadBy -}}
+                    <li>Led by: {{ if $details.leadBy -}}
                         {{ $details.leadBy }}
                     {{- else -}} <span class="text-grey">[missing data]</span>
                     {{- end -}}</li>
