minor changes to explore buttons on landing pages

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -21,10 +21,9 @@
           Start the conversation now!
         </div>
         <div>
-          <div class="half">
-            <div><a href="/countries/" class="btn">Explore by country</a></div>
-            
-            <div><a href="/topics/" class="btn">Explore by topic</a></div>
+          <div class="btn-list">
+            <a href="/countries/" class="btn">Explore by country</a>
+            <a href="/topics/" class="btn">Explore by topic</a>
           </div>
         </div>
       </div>
