--- a/templates/about.html
+++ b/templates/about.html
@@ -54,7 +54,7 @@
       </div>
     </div>
   </section>
-  <section class="bg-grey">
+  <section>
     <div class="container center-text">
       <h2 class="h2-lg">Acknowledgements</h2>
       <p class="content">This project aws initally supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/" class="dark-link">Unlock Accelerator</a>. <a class="dark-link" href="https://wikimedia.se/">Wikimedia Sverige</a> is graciously providing us with Matomo analytics. The data we collect is <a class="dark-link" href="https://matomo.wikimedia.se/index.php?module=CoreHome&action=index&idSite=7&period=day&date=yesterday#?idSite=7&period=day&date=yesterday&segment=&category=Dashboard_Dashboard&subcategory=1">publicly accessible</a>.</p>
