--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,14 +7,33 @@
 
 {{ define "main" }}
 <header class="splash">
-  <div>
-    <img aria-hidden="true" src="/logo-white.svg" width="142" height="171">
-    <h1 class="h1-lg">Govdirectory</h1>
-    <p>A crowdsourced and fact checked directory of official governmental online accounts and services.</p>
+  <div class="container">
+    <h1 class="h1-lg text-orange">Get your voice heard!</h1>
+    <p>The easiest way to contact your government<span class="text-orange">.</span></p>
   </div>
 </header>
 
 <main>
+  <section class="bg-orange">
+    <div class="container">
+      <div class="half">
+        <div class="body-lg-text">
+          Start the conversation now!
+        </div>
+        <div>
+          <div class="btn-list">
+            <a href="/countries/" class="btn">Explore by country</a>
+            <a href="/topics/" class="btn">Explore by topic</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-grey">
+    <div class="container h3-lg">
+      Govdirectory is a crowdsourced and fact checked directory of official governmental online accounts and services.
+    </div>
+  </section>
   <section>
     <div class="container center-text">
       <h2>Explore by country</h2>
@@ -48,12 +67,11 @@
     <div class="container">
       <div class="half">
         <div class="center-text">
-          <img aria-hidden="true" src="community.svg" width="261" height="161"/>
+          <img class="greyscale" aria-hidden="true" src="factory.jpg" height="300"/>
         </div>
-        <div>
-          <h2>Built by a community</h2>
-          <p>Support our efforts in creating transparency about governmental institutions and their activities online</p>
-          <a class="btn" href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory">Learn more about the community</a>
+        <div class="padding">
+          <h2>"Who are the largest CO2 emitters in Sweden?"</h2>
+          <a class="btn" href="/countries/">Ask your own government!</a>
         </div>
       </div>
     </div>
@@ -61,12 +79,12 @@
     <section class="bg-grey">
     <div class="container">
       <div class="half">
-        <div>
-          <h2>Data quality through constant curation</h2>
-          <p>Based on Wikipedia's sister project Wikidata the data is constantly fact checked by a rigorous and dedicated community. With the help of tools that help monitor changes in data and entering data correctly, collectively the data can be kept up to date and accurate.</p>
+        <div class="padding">
+          <h2>"To which countries did Norway export war material to in 2020?"</h2>
+          <a class="btn" href="/countries/">Ask your own government!</a>
         </div>
         <div class="center-text">
-          <img aria-hidden="true" src="curation.svg" width="271" height="258"/>
+          <img class="greyscale" aria-hidden="true" src="helicopter.jpg" height="300"/>
         </div>
         </div>
       </div>
