--- a/templates/404.html
+++ b/templates/404.html
@@ -16,7 +16,7 @@
 
       <p class="need-js" id="looking">We are looking for it.</p>
       <div class="need-js" id="hint"></div>
-      {{- template "spinner.html" -}}
+      {{- include "components/spinner.html" -}}
     </div>
   </section>
 </main>
