--- a/templates/org-table.html
+++ b/templates/org-table.html
@@ -8,7 +8,7 @@
     {{- range . -}}
     <tr>
         <td><a href="{{ .qid }}">{{ .orgLabel }}</a></td>
-        <td>{{ template "social-icons.html" query "account-data.rq" .qid.String }}</td>
+        <td>{{ include "components/social-icons.html" (query "account-data.rq" .qid.String) }}</td>
         <td>{{ .typeLabel }}</td>
     </tr>
     {{ end -}}
