🐛 add missing URL suffix slash on the country list page

--- a/templates/country-list.html
+++ b/templates/country-list.html
@@ -10,7 +10,7 @@
 
     <ul class="box-list">
         {{- range . -}}
-            <li><a href="/{{ .safeName }}">{{ .name }}</a></li>
+            <li><a href="/{{ .safeName }}/">{{ .name }}</a></li>
         {{- end -}}
     </ul>
 </main>
