💄 Adding country hero images
Getting images through wikivoyage

Fixes #125

--- a/templates/layouts/layout.html
+++ b/templates/layouts/layout.html
@@ -26,6 +26,7 @@
             font-weight: 100;
             font-display: swap;
         }
+        {{ block "countrystyle" . }}{{ end }}
     </style>
     <link rel="stylesheet" href="/main.css">
 
