--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -3,47 +3,72 @@
 
 {{ define "title" }}{{ .name }}{{ end }}
 
+{{ define "countrystyle" }}
+.country-container {
+    width: 100%;
+    position: relative;
+    background-color: #062B58;
+    padding-top: 2em;
+    isolation: isolate;
+}
+
+.country::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    background-image: url('{{ .banner }}');
+    background-size: cover;
+    filter: grayscale(100%);
+    mix-blend-mode: overlay;
+}
+{{ end }}
+
 {{ define "canonical" }}/{{ .safeName }}/{{ end }}
 
 {{ define "main" }}
-<div class="container">
-    <header class="item">
-        <h1>{{ .name }}</h1>
-        <p>{{ .nativeLabel }}</p>
-        <p>{{ .description }}</p>
+<div class="country-container">
+	<div class="country">
+		<div class="container">
+			<header class="item">
+				<h1>{{ .name }}</h1>
+				<p>{{ .nativeLabel }}</p>
+				<p>{{ .description }}</p>
 
-        <div class="header-lower">
-            <div class="infobox">
-                <ul>
-                    <li>Type of government: {{ if .typeOfGovList -}}
-                        {{- range $i, $type := (split .typeOfGovList.String ",") -}}
-                            {{- if $i -}}, {{ end -}}{{- $type -}}
-                        {{- end -}}
-                    {{- else -}} <span class="text-grey">[missing data]</span>
-                    {{- end -}}</li>
-                    <li>Head of state: {{ if .headOfStateLabel -}}
-                        {{ .headOfStateLabel }}
-                    {{- else -}} <span class="text-grey">[missing data]</span>
-                    {{- end -}}</li>
-                    <li>Head of government: {{ if .headOfGovLabel -}}
-                        {{ .headOfGovLabel }}
-                    {{- else -}} <span class="text-grey">[missing data]</span>
-                    {{- end -}}</li>
-                    <li>Official website: {{ if .website -}}
-                        <a href="{{ .website }}">{{ replace (replace .website.String "http://" "" 1) "https://" "" 1 }}</a>
-                    {{- else -}} <span class="text-grey">[missing data]</span>
-                    {{- end -}}</li>
-                </ul>
-            </div>
+				<div class="header-lower">
+				    <div class="infobox">
+				        <ul>
+				            <li>Type of government: {{ if .typeOfGovList -}}
+				                {{- range $i, $type := (split .typeOfGovList.String ",") -}}
+				                    {{- if $i -}}, {{ end -}}{{- $type -}}
+				                {{- end -}}
+				            {{- else -}} <span class="text-grey">[missing data]</span>
+				            {{- end -}}</li>
+				            <li>Head of state: {{ if .headOfStateLabel -}}
+				                {{ .headOfStateLabel }}
+				            {{- else -}} <span class="text-grey">[missing data]</span>
+				            {{- end -}}</li>
+				            <li>Head of government: {{ if .headOfGovLabel -}}
+				                {{ .headOfGovLabel }}
+				            {{- else -}} <span class="text-grey">[missing data]</span>
+				            {{- end -}}</li>
+				            <li>Official website: {{ if .website -}}
+				                <a href="{{ .website }}">{{ replace (replace .website.String "http://" "" 1) "https://" "" 1 }}</a>
+				            {{- else -}} <span class="text-grey">[missing data]</span>
+				            {{- end -}}</li>
+				        </ul>
+				    </div>
 
-            <div class="center-text action-boxes">
-                <div>
-                    <h2>Found an error?</h2>
-                    <a class="btn" href="{{ .uri }}">Edit on Wikidata</a>
-                </div>
-            </div>
-        </div>
-    </header>
+				    <div class="center-text action-boxes">
+				        <div>
+				            <h2>Found an error?</h2>
+				            <a class="btn" href="{{ .uri }}">Edit on Wikidata</a>
+				        </div>
+				    </div>
+				</div>
+			</header>
+		</div>
+	</div>
 </div>
 
 <main>
