--- a/templates/landing.html
+++ b/templates/landing.html
@@ -21,7 +21,7 @@
           Start the conversation now!
         </div>
         <div>
-          <div class="btn-list">
+          <div class="btn-list center-text">
             <a href="/countries/" class="btn">Explore by country</a>
             <a href="/topics/" class="btn">Explore by topic</a>
           </div>
