--- a/static/main.css
+++ b/static/main.css
@@ -409,56 +409,48 @@ header.topic {
     justify-content: center;
     flex-direction: column;
     width: 100%;
+    background-size: cover;
+    background-position: center;
 }
 
 .topic-background.recreation-culture-religion {
-    background: url('recreation-culture-religion.jpg');
-    background-size: cover;
+    background-image: url('recreation-culture-religion.jpg');
 }
 
 .topic-background.health {
-    background: url('health.jpg');
-    background-size: cover;
+    background-image: url('health.jpg');
 }
 
 .topic-background.defense {
-    background: url('defense.jpg');
-    background-size: cover;
+    background-image: url('defense.jpg');
 }
 
 .topic-background.education {
-    background: url('education.jpg');
-    background-size: cover;
+    background-image: url('education.jpg');
 }
 
 .topic-background.environmental-protection {
-    background: url('environmental-protection.jpg');
-    background-size: cover;
+    background-image: url('environmental-protection.jpg');
 }
 
 .topic-background.general-public-services {
-    background: url('general-public-services.jpg');
-    background-size: cover;
+    background-image: url('general-public-services.jpg');
 }
 
 .topic-background.economic-affairs {
-    background: url('economic-affairs.jpg');
-    background-size: cover;
+    background-image: url('economic-affairs.jpg');
 }
 
 .topic-background.housing-community-amenities {
-    background: url('housing-community-amenities.jpg');
-    background-size: cover;
+    background-image: url('housing-community-amenities.jpg');
 }
 
 .topic-background.public-order-safety {
-    background: url('public-order-safety.jpg');
-    background-size: cover;
+    background-image: url('public-order-safety.jpg');
 }
 
 .topic-background.social-protection {
-    background: url('social-protection.jpg');
-    background-size: cover;
+    background-image: url('social-protection.jpg');
 }
 
 
