--- a/templates/landing.html
+++ b/templates/landing.html
@@ -51,7 +51,7 @@
     <div class="container">
       <div class="half">
         <div class="padding">
-          <h2>"To which countries did Norway export war material to in 2020?"</h2>
+          <h2>"To which countries did Norway export war materials in 2020?"</h2>
           <a class="btn" href="/countries/">Ask your own government!</a>
         </div>
         <div class="center-text">
