⛔ add rel="nofollow" to social media links

--- a/templates/components/social-icons.html
+++ b/templates/components/social-icons.html
@@ -4,19 +4,19 @@
     {{- range . -}}
         {{- if eq .property (uri "http://www.wikidata.org/entity/P2002") -}}{{/* Twitter */}}
             {{- $preview_count = add1 $preview_count -}}
-            <li><a title="Twitter" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/twitter.svg" /></a></li>
+            <li><a rel="nofollow" title="Twitter" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/twitter.svg" /></a></li>
         {{- else if eq .property (uri "http://www.wikidata.org/entity/P2397") -}}{{/* YouTube */}}
             {{- $preview_count = add1 $preview_count -}}
-            <li><a title="YouTube" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/youtube.svg" /></a></li>
+            <li><a rel="nofollow" title="YouTube" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/youtube.svg" /></a></li>
         {{- else if eq .property (uri "http://www.wikidata.org/entity/P4264") -}}{{/* LinkedIn */}}
             {{- $preview_count = add1 $preview_count -}}
-            <li><a title="LinkedIn" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/linkedin.svg" /></a></li>
+            <li><a rel="nofollow" title="LinkedIn" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/linkedin.svg" /></a></li>
         {{- else if eq .property (uri "http://www.wikidata.org/entity/P2013") -}}{{/* Facebook */}}
             {{- $preview_count = add1 $preview_count -}}
-            <li><a title="Facebook" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/facebook.svg" /></a></li>
+            <li><a rel="nofollow" title="Facebook" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/facebook.svg" /></a></li>
         {{- else if eq .property (uri "http://www.wikidata.org/entity/P2003") -}}{{/* Instagram */}}
             {{- $preview_count = add1 $preview_count -}}
-            <li><a title="Instagram" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/instagram.svg" /></a></li>
+            <li><a rel="nofollow" title="Instagram" href="{{ .url }}"><img width="20" aria-hidden="true" src="/social-icons/instagram.svg" /></a></li>
         {{- end -}}
     {{- end -}}
     {{- if ne (sub (len .) $preview_count) 0 -}}
