📄 Add license information for country banners
Thanks to @lucaswerkmeister for help with the query.

--- a/static/main.css
+++ b/static/main.css
@@ -386,6 +386,13 @@ header.item {
     margin-right: .5em;
 }
 
+.image-license {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    color: #fff;
+}
+
 /* SPINNER */
 
 .spinner {
