--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -68,7 +68,7 @@
     <table>
         {{- range . -}}
         <tr>
-            <th>{{ .name }}</th>
+            <th class="js-sort-none">{{ .name }}</th>
             <td>{{ .description }}</td>
         </tr>
         {{- end -}}
