🐛 do not display sorting indicator on uninteractive tables

--- a/templates/social-table.html
+++ b/templates/social-table.html
@@ -1,7 +1,7 @@
 <table class="container">
     <tr>
-      <th>Platform</th>
-      <th>Account</th>
+      <th class="js-sort-none">Platform</th>
+      <th class="js-sort-none">Account</th>
     </tr>
 
     {{- range . -}}
