--- a/templates/topic-page.html
+++ b/templates/topic-page.html
@@ -19,7 +19,7 @@
                 <h2 class="m0">Agencies</h2>
                 <input id="filter-input" type="text" placeholder="Search" aria-label="Search/filter table" class="need-js"/>
             </div>
-            <a id="download" download="{{ .name }}.csv" href="#" class="btn need-js">Download</a>
+            <a id="download" download="{{ .name }}.tsv" href="#" class="btn need-js">Download</a>
         </div>
     </section>
 
@@ -57,7 +57,7 @@
 <script>
 const dataTable = document.querySelector('table');
 
-let csv = '"Name","Govdirectory URL","Type","Accounts"\n';
+let tsv = '"Name","Govdirectory URL","Type","Accounts"\n';
 Array.from(dataTable.children[0].children).forEach((row, index) => {
     if (index === 0) return; // header
     const name = row.children[0].innerText;
@@ -72,12 +72,12 @@ Array.from(dataTable.children[0].children).forEach((row, index) => {
         accounts = '';
     }
 
-    const csvRow = '"' + name + '","' + qid + '","' + type + '","' + accounts + '"\n';
-    csv += csvRow;
+    const tsvRow = '"' + name + '"\t"' + qid + '"\t"' + type + '"\t"' + accounts + '"\n';
+    tsv += tsvRow;
 });
 
 const downloadElm = document.querySelector('#download');
-downloadElm.href = window.URL.createObjectURL(new Blob([csv], { type: 'text/csv' }));
+downloadElm.href = window.URL.createObjectURL(new Blob([tsv], { type: 'text/tsv' }));
 
 var filterInput = document.querySelector('#filter-input');
 var tbody = document.querySelector('tbody');
