🖼 simplify agency pages
Move Wikidata button, make action buttons descriptive and drop their headers.

Progress towards #87 #179 #65 #178.

--- a/static/main.css
+++ b/static/main.css
@@ -416,6 +416,14 @@ header.topic {
     margin-right: .5em;
 }
 
+.btn-list .wikidata-btn {
+    background-color: #FFF;
+    float: right;
+    width: 18px;
+    height: 18px;
+    padding: 8px;
+}
+
 /* STATISTICS */
 
 .number-container {
