--- a/templates/org.html
+++ b/templates/org.html
@@ -95,7 +95,7 @@
                 {{- end -}}
                 {{- if $details.citizensInitiatives -}}
                 <div>
-                    <a class="btn" href="{{ $details.citizensInitiatives }}">Citizen's initiatives</a>
+                    <a class="btn" href="{{ $details.citizensInitiatives }}">Make a citizen's initiative</a>
                 </div>
                 {{- end -}}
             </div>
