--- a/templates/org.html
+++ b/templates/org.html
@@ -93,6 +93,11 @@
                     <a class="btn" href="{{ $details.email }}">Send an email</a>
                 </div>
                 {{- end -}}
+                {{- if $details.foiUrl -}}
+                <div>
+                    <a class="btn" href="{{ $details.foiUrl }}">Make a freedom of information request</a>
+                </div>
+                {{- end -}}
                 {{- if $details.citizensInitiatives -}}
                 <div>
                     <a class="btn" href="{{ $details.citizensInitiatives }}">Make a citizen's initiative</a>
