⁉ add a button for reporting errors #87

--- a/templates/org.html
+++ b/templates/org.html
@@ -55,6 +55,7 @@
             <a class="btn rounded" href="/{{ $currentCountrySafeName }}/">{{ $currentCountryName }}</a>
             {{- if .cofog -}}<a class="btn rounded" href="/{{ $cofogSafeName }}/">{{ $cofogLabel }}</a>{{- end -}}
             <a class="btn rounded wikidata-btn" href="https://www.wikidata.org/wiki/{{ .qid }}" title="Edit on Wikidata"><img src="/wikidata.svg" aria-hidden="true"></a>
+            <a class="btn rounded wikidata-btn" href="https://www.wikidata.org/w/index.php?action=edit&title=Wikidata:WikiProject_Govdirectory/Error_reports&section=new&preloadtitle=Error+regarding+{{ .qid }}&preload=Wikidata%3AWikiProject_Govdirectory%2FError_reports%2FError_report_template" title="Report a problem"><img src="/flag.svg" aria-hidden="true"></a>
         </div>
         <h1>{{ .orgLabel }}</h1>
         <p>{{ .orgDescription }}</p>
