--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -47,7 +47,7 @@
 {{- end -}}
 <main class="container">
     <h1>Statistics</h1>
-    <p>Last updated {{ now.Format "2006-01-02" }}. Live website usage statistics are publicly accessible through <a class="dark-link" href="https://matomo.wikimedia.se/index.php?module=CoreHome&action=index&idSite=7&period=day&date=yesterday#?idSite=7&period=day&date=yesterday&segment=&category=Dashboard_Dashboard&subcategory=1">Matomo</a>.</p>
+    <p>Last updated <time datetime="{{ now.Format "2006-01-02" }}">{{ now.Format "2006-01-02" }}</time>. Live website usage statistics are publicly accessible through <a class="dark-link" href="https://matomo.wikimedia.se/index.php?module=CoreHome&action=index&idSite=7&period=day&date=yesterday#?idSite=7&period=day&date=yesterday&segment=&category=Dashboard_Dashboard&subcategory=1">Matomo</a>.</p>
 
     <div class="grid number-container">
         <div class="number">
