--- a/templates/country-list.html
+++ b/templates/country-list.html
@@ -13,7 +13,7 @@
             <li><a href="/{{ .safeName }}/">{{ .name }}</a></li>
         {{- end -}}
     </ul>
-    <p class="center-text">Would you like to see more countries added? <a href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory" class="dark-link">Help us get the data in shape here.</a></p>
+    <p class="call-out">Would you like to see more countries added? <a href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory">Help us get the data in shape here.</a></p>
 </main>
 {{ end }}
 
