💬 Added call to action for missing countries (#206)
* 💬 Added call to action for missing countries

* 🎨 Consistent style on call to actions

--- a/templates/country-list.html
+++ b/templates/country-list.html
@@ -13,6 +13,7 @@
             <li><a href="/{{ .safeName }}/">{{ .name }}</a></li>
         {{- end -}}
     </ul>
+    <p class="call-out">Would you like to see more countries added? <a href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory">Help us get the data in shape here.</a></p>
 </main>
 {{ end }}
 
