💄 Making headers sticky
This will make it easier to search and sort and also to see whick column
contains what after starting scrolling. Added on country and topic pages.

--- a/templates/country-page.html
+++ b/templates/country-page.html
@@ -47,7 +47,7 @@
 </div>
 
 <main>
-    <section class="bg-grey">
+    <section class="bg-grey sticky-grey">
         <div class="container move-away">
             <div>
                 <h2 class="m0">Agencies</h2>
