--- a/static/main.css
+++ b/static/main.css
@@ -76,6 +76,11 @@ a, a:hover {
     background-color: #F8F4ED;
 }
 
+.sticky-grey {
+		position: sticky;
+		top: 60px;
+}
+
 .bg-orange {
     background: #E66A49;
     padding: 20px 0;
@@ -242,6 +247,12 @@ table {
     border-collapse: collapse;
     width: 100%;
     text-align: left;
+}
+
+table thead {
+		position: sticky;
+		top: 160px;
+		background: white;
 }
 
 table a {
