--- a/templates/topic-page.html
+++ b/templates/topic-page.html
@@ -13,7 +13,7 @@
 </div>
 
 <main>
-    <section class="bg-grey">
+    <section class="bg-grey sticky-grey">
         <div class="container move-away">
             <div>
                 <h2 class="m0">Agencies</h2>
