--- a/templates/topic-page.html
+++ b/templates/topic-page.html
@@ -15,11 +15,11 @@
 <main>
     <section class="bg-grey sticky-grey">
         <div class="container move-away">
-            <div>
-                <h2 class="m0">Agencies</h2>
-                <input id="filter-input" type="text" placeholder="Search" aria-label="Search/filter table" class="need-js"/>
+            <div class="expand-mobile">
+                <h2 class="m0 expand-mobile">Agencies</h2>
+                <input id="filter-input" type="text" placeholder="Search" aria-label="Search/filter table" class="need-js expand-mobile"/>
             </div>
-            <a id="download" download="{{ .name }}.tsv" href="#" class="btn need-js">Download</a>
+            <a id="download" download="{{ .name }}.tsv" href="#" class="btn need-js expand-mobile">Download</a>
         </div>
     </section>
 
