--- a/static/main.css
+++ b/static/main.css
@@ -306,6 +306,7 @@ table th:not(.js-sort-none):hover {
     background: #062B58;
     color: #fff;
     text-decoration: none;
+    text-align: center;
     padding: 7px 21px;
     line-height: 18px;
     border-radius: 3px;
